# mkdocs-partial

./: .gitignore  .gitlab-ci.yml  .pylintrc  DEVELOP.md  GitVersion.yml  README.md  serve.ps1  setup.cfg
docs/: index.md  known_words.txt
documentation_mkdocs_partial/: __init__.py  docs_package_plugin.py  entry_point.py  macros_pluglet.py  mkdocs_macros_integration.py  mkdocs_material_blog_integration.py  mkdocs_spellcheck_shim.py  partial_docs_plugin.py  report_base.py  site_entry_point.py  tmp.py  version.py
documentation_mkdocs_partial/integrations/: macros_plugin_shim.py  material_blog_integration.py  redirect_plugin_shim.py  spellcheck_plugin_shim.py
documentation_mkdocs_partial/packaging/: packager.py
documentation_mkdocs_partial/packaging/templates/: METADATA.j2  entry_points.txt.j2  plugin.py.j2  setup.py.j2
documentation_mkdocs_partial/packaging/templates/docs-package/package/: plugin.py.j2
documentation_mkdocs_partial/packaging/templates/site-package/dist-info/: METADATA.j2  entry_points.txt.j2
documentation_mkdocs_partial/packaging/templates/site-package/package/: entry_point.py.j2
mkdocs_partial/: docs_package_plugin.py  entry_point.py  partial_docs_plugin.py  site_entry_point.py
mkdocs_partial/integrations/: macros_plugin_shim.py  material_blog_integration.py  spellcheck_plugin_shim.py
tests/: test_docs_package_plugin.py  test_investigation.py  test_packager.py  test_site_entry_point.py  tests_docs_package_plugin.py
