[metadata]
name = documentation-mkdocs-partial
version = attr: documentation_mkdocs_partial.version.__version__
description = Mkdocs partial documentation

[options]
zip_safe = False
include_package_data = True

packages =
    find:

install_requires =
    setuptools >= 74, <75
    PyYAML >= 6.0.1,<6.1
    mkdocs >= 1.6, <1.7
    python-frontmatter >= 1.1.0, <1.2
    argparse >=1.4, <1.5
    hurry.filesize >= 0.9


[options.extras_require]
lint =
    black >=24.8, <25
    flake8 >=7.0.0,<8.0.0
    isort >=5.13.0,<6.0.0
    pylint >=3.2.7,<4.0.0
test =
    pytest >=7.1.3,<8.0.0
    pytest-cov >=3.0.0,<4.0.0
    pytest-mock >=3.0.0,<4.0.0
    pytest-resource-path == 1.3.0

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.package_data]
* =
    version

documentation_mkdocs_partial =
    templates/**/*

[pep8]
max-line-length = 120

[isort]
line_length = 120
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = checker,tests
profile = black
skip_glob =
    env/*
    venv/*

[flake8]
max-line-length = 120
exclude =
    env/*,
    venv/*,
    .git,
    __pycache__,
    build,
    dist,
    test_*.py,
extend-ignore = W293, W504, E203
per-file-ignores =
    __init__.py:F401

[tool:pytest]
;log_format = %(asctime)s %(levelname)s <%(name)s>:  %(message)s
;log_date_format = %Y-%m-%d %H:%M:%S
log_cli=true
log_level=INFO
testpaths = tests/
python_files = test_*.py
pythonpath = .
addopts = --cov=documentation_mkdocs_partial --cov-report=term-missing


[options.entry_points]
mkdocs.plugins =
    docs_package =  documentation_mkdocs_partial.docs_package_plugin:DocsPackagePlugin

console_scripts =
    mkdocs-partial = documentation_mkdocs_partial.entry_point:run